--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
                 <h1>Tip Calculator</h1>
             </div>
             <div class="upperAlert">
-                <img src="/check.png" title="Click to know how to use" alt="Introduction to use" onclick="giveAlert()">
-                <img src="/copy-writing.png" title="Just a NOTE" alt="Note" onclick="giveAlert1()">
+                <img src="check.png" title="Click to know how to use" alt="Introduction to use" onclick="giveAlert()">
+                <img src="copy-writing.png" title="Just a NOTE" alt="Note" onclick="giveAlert1()">
             </div>
         </div>
         <div class="grid-container">
